Chat handling, Join/Leave messages More specifically, all plugins who modify chat in any way and want to co-exist with DiscordBridge must subscribe to its ChatHandler events instead of TShock's PlayerHooks.PlayerChat, and use its ChatMessageBuilder system so that messages can be relayed even after going through multiple systems

--- a/DiscordBridge/DiscordBridge.csproj
+++ b/DiscordBridge/DiscordBridge.csproj
@@ -78,6 +78,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chat\ChatHandler.cs" />
+    <Compile Include="Chat\ChatMessage.cs" />
+    <Compile Include="Chat\ChatMessageBuilder.cs" />
+    <Compile Include="Chat\PlayerChattedEventArgs.cs" />
+    <Compile Include="Chat\PlayerChattingEventArgs.cs" />
     <Compile Include="Framework\BridgeClient.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="ConfigFile.cs" />
